Changelog for Uniplate

1.6.1
    Mark everything that was recommended not to use as deprecated
    #449, GHC 7.2 compatibility
1.6
    GHC 7 compatibility
    Eliminate mtl dependency
    Add transformer/transformBis, along with better documentation
    #364, add a zipper in Data.Generics.Uniplate.Zipper
    Add an Eq instance for Str
1.5.1
    Fix a typo in the synopsis
1.5
    Massive speed improvements to Data loading initial cache
1.4
    Add back performance enhancement for Rationals
1.3
    Rewrite, simplify, roll out Data.Generics.Uniplate.*
1.2
    Allow Data operations to work on Rational
1.1
    Add versions based on Str
1.0
    Initial release